traffic-management/prom.ingess.yaml
apiVersion: networking.istio.io/v1alpha3
kind: Gateway
metadata:
  name: prom-gateway
spec:
  selector:
    istio: ingressgateway # use Istio default gateway implementation
  servers:
  - port:
      number: 80
      name: http
      protocol: HTTP
    hosts:
    - "prometheus.haas-495.pez.vmware.com"
---
apiVersion: networking.istio.io/v1alpha3
kind: VirtualService
metadata:
  name: prom-ingress
spec:
  hosts:
  - "prometheus.haas-495.pez.vmware.com"
  gateways:
  - prom-gateway
  http:
  - route:
    - destination:
        host: prometheus-kube-prometheus-prometheus
        port:
          number: 9090
